@@ -76,7 +76,7 @@ import javax.imageio.stream.FileImageOutputStream;
  */
 public class TeXFormula {
     
-    public static final String VERSION = "0.9.1";
+    public static final String VERSION = "0.9.2";
 
     // table for putting delimiters over and under formula's,
     // indexed by constants from "TeXConstants"
