@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="version_jlm">
-<property name="version" value="0.9.1" />
+<property name="version" value="0.9.2" />
 </project>
